Made changes to contact page and fixed alignment

--- a/src/features/documentation/Documentation.css
+++ b/src/features/documentation/Documentation.css
@@ -122,6 +122,8 @@
 
   display: inline-block;
   flex-wrap: wrap;
+  vertical-align: top;
+
 
   border-width: 4px;
   border-color: black;
